--- a/index.html
+++ b/index.html
@@ -20,9 +20,101 @@
             <li><a href=""><span>Exit</span><i data-icon="close_circle"></i></a></li>
           </ul>
         </nav>
-        <h1><a href="/">Service name</a></h1>
-        <h2>Brand name</h2>
+        <h1><a href="/">TEF Components</a></h1>
+        <h2>Vivo</h2>
       </header>
+
+      <section class="tef-content">
+        <h2>Forms</h1>
+        <p>This page shows basic form elements.</p>
+
+        <div>
+          <div data-columns="2" data-columns-sm="1" class="tef-gutter">
+            <div class="tef-row">
+              <label>Consectetuer</label>
+              <input type="text" class="tef-input block">
+            </div>
+            <div class="tef-row">
+              <label>Adipiscing elit</label>
+              <input type="text" class="tef-input block">
+            </div>
+          </div>
+          <div class="tef-row">
+            <label>Sed diam nonummy</label>
+            <input type="text" class="tef-input block">
+          </div>
+          <div data-columns="4" data-columns-sm="2" data-columns-xs="1" class="tef-gutter">
+            <div class="tef-row" data-column-span="2" data-column-span-sm="2" data-column-span-xs="1">
+              <label>Nibh euismod</label>
+              <input type="text" class="tef-input block">
+            </div>
+            <div class="tef-row">
+              <label>Tincidunt</label>
+              <div class="tef-dropdown block" data-icon="angle_down">
+                <select name="state">
+                  <option>Volutpat</option>
+                  <option>Adipiscing</option>
+                  <option>Nonummy</option>
+                  <option>Euismod</option>
+                </select>
+              </div>
+            </div>
+            <div class="tef-row">
+              <label>Laoreet</label>
+              <input type="text" class="tef-input block">
+            </div>
+          </div>
+          <div class="tef-row">
+            <label>Magna aliquam</label>
+            <textarea class="tef-input block"></textarea>
+          </div>
+          <br>
+          <div class="tef-row">
+            <p>Lorem ipsum</p>
+            <label class="tef-radio">
+              <input type="radio" name="radio1" checked>
+              <span>Lorem ipsum dolor sit amet</span>
+            </label>
+            <label class="tef-radio">
+              <input type="radio" name="radio1">
+              <span>Hendrerit in vulputate velit esse molestie </span>
+            </label>
+            <label class="tef-radio">
+              <input type="radio" name="radio1">
+              <span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat </span>
+            </label>
+          </div>
+          <br>
+          <div class="tef-row">
+            <p>Laoreet dolore</p>
+            <label class="tef-checkbox">
+              <input type="checkbox" checked>
+              <span data-icon="check">Lorem ipsum dolor sit amet</span>
+            </label>
+            <label class="tef-checkbox">
+              <input type="checkbox">
+              <span data-icon="check">Hendrerit in vulputate velit esse molestie </span>
+            </label>
+            <label class="tef-checkbox">
+              <input type="checkbox">
+              <span data-icon="check">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat </span>
+            </label>
+          </div>
+          <br>
+          <div class="tef-row">
+            <p>Euismod tincidunt</p>
+            <label class="tef-switch">
+              <input type="checkbox">
+              <span>euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</span>
+            </label>
+          </div>
+          <br>
+          <footer class="tef-right">
+            <button class="tef-button subdued">Cancel</button>
+            <button class="tef-button positive">Submit</button>
+          </footer>
+        </div>
+      </section>
     </div>
 
     <script>
